# hermetic_buildbuddy_toolchain

./: .gitignore  README.md
docs/: 00-initial-prompt.md  01-background.md  02-findings.md  03-gotchas.md  04-conclusion.md
experiments/01-minimal-rbe/: MODULE.bazel  README.md
experiments/02-restrictive-containers/: README.md  main.cc  run-ladder.sh
experiments/03-no-toolchain-contrast/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md
